--- a/HnrsPortStyle.css
+++ b/HnrsPortStyle.css
@@ -279,6 +279,12 @@ footer{
 	border: 4px solid #514EB1;
 }
 
+.FactPic3 {
+	width: 180px;
+	height: 180px;
+	border: none;
+}
+
 .Imp {
 	font-weight: bold;
 	color: #FFBC6B;
